@@ -1,0 +1,79 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?xml-stylesheet type="text/xsl" href="../../../../../../../../../languagetool-core/src/main/resources/org/languagetool/rules/print.xsl" ?>
+<?xml-stylesheet type="text/css" href="../../../../../../../../../languagetool-core/src/main/resources/org/languagetool/rules/rules.css"
+        title="Easy editing stylesheet" ?>
+<!--
+Tamil Rules for LanguageTool
+Copyright (C) 2014 Elanjelian Venugopal
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library; if not, write to the Free Software
+Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
+USA
+-->
+
+<!--suppress CheckTagEmptyBody -->
+<rules lang="ta" xsi:noNamespaceSchemaLocation="../../../../../../../../../languagetool-core/src/main/resources/org/languagetool/rules/rules.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <!-- ====================================================================== -->
+    <!-- சொற்களைச் சேர்த்தும் இடம்விட்டும் எழுதுதல் -->
+    <!-- ====================================================================== -->
+    <category name="சேர்ப்பதும்_இடம்விடலும்">
+    <rulegroup id="பெயர்_பெயர்" name="1.1 பெயர் + பெயர்">
+	  <rule>
+		<pattern>
+			<token regexp='yes'>[அஈஒக-வ][ாீூேைோ]?</token>
+			<token regexp='yes'>க[ா-ௌ]?\S+</token>
+		</pattern>
+		<message>செர்த்து எழுத வேண்டும். <match no="1"/>க்<match no="2"/></message>
+		<url>http://www.tamilvu.org/slet/lA100/lA100pd3.jsp?bookid=169&amp;pno=36#head1</url>
+		<short>பெயர்_க</short>
+		<example type='incorrect'>புது <marker>மா கோலம்</marker> போடு மயிலே.</example>
+		<example type='correct'>புது மாக்கோலம் போடு மயிலே.</example>
+	  </rule>
+	  <rule>
+		<pattern>
+			<token regexp='yes'>[அஈஒக-வ][ாீூேைோ]?</token>
+			<token regexp='yes'>ச[ா-ௌ]?\S+</token>
+		</pattern>
+		<message>செர்த்து எழுத வேண்டும். <match no="1"/>ச்<match no="2"/></message>
+		<url>http://www.tamilvu.org/slet/lA100/lA100pd3.jsp?bookid=169&amp;pno=36#head1</url>
+		<short>பெயர்_ச</short>
+		<example type='incorrect'>ஒலிம்பிக் <marker>தீ சுடர்</marker>.</example>
+		<example type='correct'>ஒலிம்பிக் தீச்சுடர்.</example>
+	  </rule>
+	  <rule>
+		<pattern>
+			<token regexp='yes'>[அஈஒக-வ][ாீூேைோ]?</token>
+			<token regexp='yes'>த[ா-ௌ]?\S+</token>
+		</pattern>
+		<message>செர்த்து எழுத வேண்டும். <match no="1"/>த்<match no="2"/></message>
+		<url>http://www.tamilvu.org/slet/lA100/lA100pd3.jsp?bookid=169&amp;pno=36#head1</url>
+		<short>பெயர்_த</short>
+		<example type='incorrect'><marker>தை திங்கள்</marker> மலரட்டும்.</example>
+		<example type='correct'>தைத்திங்கள் மலரட்டும்.</example>
+	  </rule>
+	  <rule>
+		<pattern>
+			<token regexp='yes'>[அஈஒக-வ][ாீூேைோ]?</token>
+			<token regexp='yes'>ப[ா-ௌ]?\S+</token>
+		</pattern>
+		<message>செர்த்து எழுத வேண்டும். <match no="1"/>ப்<match no="2"/></message>
+		<url>http://www.tamilvu.org/slet/lA100/lA100pd3.jsp?bookid=169&amp;pno=36#head1</url>
+		<short>பெயர்_ப</short>
+		<example type='incorrect'>அவர்கள் <marker>தீ பந்தங்களோடு</marker> வந்தனர்.</example>
+		<example type='correct'>அவர்கள் தீப்பந்தங்களோடு வந்தனர்.</example>
+	  </rule>
+	</rulegroup>
+    </category>
+
+</rules>
