@@ -120,6 +120,7 @@
     <module>languagetool-language-modules/sl</module>
     <module>languagetool-language-modules/es</module>
     <module>languagetool-language-modules/sv</module>
+    <module>languagetool-language-modules/ta</module>
     <module>languagetool-language-modules/tl</module>
     <module>languagetool-language-modules/uk</module>
     <module>languagetool-language-modules/de-DE-x-simple-language</module>
