@@ -3,7 +3,10 @@ LanguageTool Change Log
 2.7-SNAPSHOT (release planned for 2014-09-29)
 
 -German:
-    -Fixed a rare NullPointerException and an ArrayIndexOutOfBoundsException 
+    -Fixed a rare NullPointerException and an ArrayIndexOutOfBoundsException
+     
+-Tamil:
+    -Added initial support for Tamil
 
 -API:
     -WhitespaceRule has been renamed to MultipleWhitespaceRule (WhitespaceRule
